--- a/package.json
+++ b/package.json
@@ -8,16 +8,40 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "browserslist": "defaults, not ie <= 11",
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.1.0"
+    "@headlessui/react": "^1.7.0",
+    "@next/font": "^13.1.1",
+    "@notionhq/client": "^2.2.0",
+    "@supabase/supabase-js": "^2.0.1",
+    "@tailwindcss/typography": "^0.5.4",
+    "@vercel/analytics": "^0.1.1",
+    "@vercel/og": "^0.0.19",
+    "@vercel/speed-insights": "^1.0.2",
+    "autoprefixer": "^10.4.7",
+    "clsx": "^1.2.0",
+    "eslint": "^7.32.0",
+    "fast-glob": "^3.2.11",
+    "feed": "^4.2.2",
+    "focus-visible": "^5.2.0",
+    "highlight.js": "^11.6.0",
+    "next": "^14.0.4",
+    "next-seo": "^5.5.0",
+    "postcss-focus-visible": "^6.0.4",
+    "react": "^18.2.0",
+    "react-countup": "^6.4.2",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
+    "react-tweet": "^2.0.0",
+    "react-twitter-embed": "^4.0.4",
+    "slugify": "^1.6.5",
+    "swr": "^1.3.0",
+    "tailwindcss": "^3.1.4"
   },
   "devDependencies": {
-    "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.0"
+    "@types/react": "18.0.21",
+    "eslint-config-next": "^14.0.4",
+    "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.11"
   }
 }
